Set lineup button tweak. Wrapped lineup set in autorun to ensure shows on team opening

--- a/client/main.css
+++ b/client/main.css
@@ -27,7 +27,7 @@ body {
     background: #c9daf8;
 }
 
-#playersTable .toggle-selection:hover {
+#playersTable .toggle-selection:hover, .toggleGameweekPlayers:hover {
     cursor: pointer;
 }
 
